--- a/lp/writing-seminar/index.html
+++ b/lp/writing-seminar/index.html
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto">
                     <div class="site-heading">
-                        <h1>ライティングで資産を生む</h1><span class="subheading">ライティングセミナーby Nikki</span></div>
+                        <h1>ライティング<br>で資産を生む</h1><span class="subheading">ライティングセミナーby Nikki</span></div>
                 </div>
             </div>
         </div>
