--- a/lp/writing-seminar/index.html
+++ b/lp/writing-seminar/index.html
@@ -18,21 +18,21 @@
             <div
                 class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="http://dont-be-webcreater.com/%E3%83%9B%E3%83%BC%E3%83%A0%E3%83%9A%E3%83%BC%E3%82%B8/">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://dont-be-webcreater.com/%E3%83%9B%E3%83%BC%E3%83%A0%E3%83%9A%E3%83%BC%E3%82%B8/">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/">About us</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="http://dont-be-webcreater.com/%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B/">Contact us</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="http://dont-be-webcreater.com/%E3%83%9B%E3%83%BC%E3%83%A0%E3%83%9A%E3%83%BC%E3%82%B8/">Blog Post</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://dont-be-webcreater.com/%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B/">Contact us</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://dont-be-webcreater.com/%E3%83%9B%E3%83%BC%E3%83%A0%E3%83%9A%E3%83%BC%E3%82%B8/">Blog Post</a></li>
                 </ul>
         </div>
         </div>
     </nav>
-    <header class="masthead" style="background-image:url(&quot;assets/img/green-chameleon-21532-unsplash.jpg&quot;);">
+    <header class="masthead" style="background-image:url(&quot;assets/img/green-chameleon-21532-unsplash-min.jpg&quot;);">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto">
                     <div class="site-heading">
-                        <h1>ライティング<br>で資産を生む</h1><span class="subheading">ライティングセミナーby Nikki</span></div>
+                        <h1>ライティングで資産を生む</h1><span class="subheading">ライティングセミナーby Nikki</span></div>
                 </div>
             </div>
         </div>
